@@ -145,8 +145,7 @@ void WFST::trainFinish(Weight converge_arc_delta, Weight converge_perplexity_rat
       pp_ratio_scaled.setZero();
     } else {
       Weight pp_ratio=newPerplexity/lastPerplexity;
-      pp_ratio_scaled = root(pp_ratio,trn->totalEmpiricalWeight); // EM delta=(L'-L)/abs(L')
-      // we already scale for L' by dividing by #observations.  could go either way.
+      pp_ratio_scaled = root(pp_ratio,newPerplexity.getLogImp()); // EM delta=(L'-L)/abs(L')      
       Config::log() << " (relative-perplexity-ratio=" << pp_ratio_scaled << "), max{d(weight)}=" << lastChange;
 #ifdef DEBUG_ADAPTIVE_EM
       Config::log()  << " last-perplexity="<<lastPerplexity<<' ';
@@ -466,7 +465,7 @@ Weight WFST::train_estimate(bool delete_bad_training)
 #ifdef DEBUG_ESTIMATE_PP
     Config::debug() << ',' << fin;
 #endif
-    prodModProb *= (fin^seq->weight); // since perplexity = 2^((-1/n)*sum(log2 prob)) = (2^sum(log2 prob))^(-1/n) , we can take prod(prob)^(1/n) instead; prod(prob) = prodModProb, of course.  raising ^N does the multiplication N times for an example that is weighted N
+    prodModProb *= (fin^seq->weight); // since perplexity = 2^(- avg log likelihood)=2^((-1/n)*sum(log2 prob)) = (2^sum(log2 prob))^(-1/n) , we can take prod(prob)^(1/n) instead; prod(prob) = prodModProb, of course.  raising ^N does the multiplication N times for an example that is weighted N
 
 #ifdef DEBUGTRAIN
     Config::debug()<<"Forward prob = " << fin << std::endl;
@@ -543,7 +542,7 @@ Weight WFST::train_estimate(bool delete_bad_training)
     ++seq;
   } // end of while(training examples)
 
-  return root(prodModProb,trn->totalEmpiricalWeight).invert(); // ,trn->totalEmpiricalWeight); // return model perplexity = Nth root of 2^entropy
+  return root(prodModProb,trn->totalEmpiricalWeight).invert(); // ,trn->totalEmpiricalWeight); // return model perplexity = 1/Nth root of 2^entropy
 
 }
 
